--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!--VINCULACIÓN STYLES-->
     <link rel="stylesheet" href="/public/assets/styles/styles.css">
     <!--FAVICON-->
-    <link rel="shortcut icon" href="/app/assets/img/logo/logo_planta.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/assets/img/logo/logo_planta.png" type="image/x-icon">
     <!--FUENTES GOOGLE-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,33 +20,33 @@
             <div class="titulo_hamburguesa">
                 <ul>
                     <li>Menu</li>
-                    <li><img id="cerrar_menu" src="./assets/img/icons/cerrar_icono.png" alt="Ícono Cerrar Menú Hamburguesa"></li>
+                    <li><img id="cerrar_menu" src="/public/assets/img/icons/cerrar_icono.png" alt="Ícono Cerrar Menú Hamburguesa"></li>
                 </ul>
             </div>
             <div class="links_hamburguesa">
                 <ul>
-                    <li><img class="li_01" src="./assets/img/icons/taza_cafe.png" alt=""><a href="#nosotros">NOSOTROS</a></li>
-                    <li><img class="li_02" src="./assets/img/icons/cafe_granos_2.png" alt=""><a href="#productos">PRODUCTOS</a></li>
-                    <li><img class="li_03" src="./assets/img/icons/planta_cafe.png" alt=""><a href="#contacto">CONTACTO</a></li>
+                    <li><img class="li_01" src="/public/assets/img/icons/taza_cafe.png" alt=""><a href="#nosotros">NOSOTROS</a></li>
+                    <li><img class="li_02" src="/public/assets/img/icons/cafe_granos_2.png" alt=""><a href="#productos">PRODUCTOS</a></li>
+                    <li><img class="li_03" src="/public/assets/img/icons/planta_cafe.png" alt=""><a href="#contacto">CONTACTO</a></li>
                 </ul>
             </div>
             <div class="redes_hamburguesa">
-                <a href="/"><img src="./assets/img/icons/instagram.png" alt="Ícono Instagram"></a>
-                <a href="/"><img src="./assets/img/icons/facebook.png" alt="Ícono Facebook"></a>
-                <a href="/"><img src="./assets/img/icons/whatsapp.png" alt="Ícono Whatsapp"></a>
+                <a href="/"><img src="/public/assets/img/icons/instagram.png" alt="Ícono Instagram"></a>
+                <a href="/"><img src="/public/assets/img/icons/facebook.png" alt="Ícono Facebook"></a>
+                <a href="/"><img src="/public/assets/img/icons/whatsapp.png" alt="Ícono Whatsapp"></a>
             </div>
         </div>
     <!--NAV-->
     <nav>
         <ul class="ul_nav">
-            <li><a href="/index.html"><img src="./assets/img/logo/logo_horizontal.png" alt="Logo Horizontal"></a></li>
+            <li><a href="/index.html"><img src="/public/assets/img/logo/logo_horizontal.png" alt="Logo Horizontal"></a></li>
             <li><a href="#nosotros">NOSOTROS</a></li>
             <li><a href="#productos">PRODUCTOS</a></li>
             <li><a href="#contacto">CONTACTO</a></li>
         </ul>
         <button id="adminButton">🔒Administración</button>
         <button id="logOutButton">Cerrar Sesión</button>
-        <img class="icon_hamburguesa" id="icon_hamburguesa" src="./assets/img/icons/menu_hamburguesa.png" alt="Ícono Menu Hamburguesa">
+        <img class="icon_hamburguesa" id="icon_hamburguesa" src="/public/assets/img/icons/menu_hamburguesa.png" alt="Ícono Menu Hamburguesa">
     </nav>
     <!--MAIN-->
     <main>
