--- a/public/index.html
+++ b/public/index.html
@@ -51,14 +51,14 @@
     <!--MAIN-->
     <main>
         <figure class="contenedor_whatsapp" id="contenedor_whatsapp">
-            <a href="https://wa.me/573206214348?text=¡Hola!%20Quiero%20contactarme%20con%20Café%20frutal"><img src="./assets/img/icons/whatsapp.png" alt="Logo whatsapp"></a>
+            <a href="https://wa.me/573206214348?text=¡Hola!%20Quiero%20contactarme%20con%20Café%20frutal"><img src="/public/assets/img/icons/whatsapp.png" alt="Logo whatsapp"></a>
         </figure>
         <section class="contenedor_principal">
             <figure class="contenedor_carrousel">
                 <ul>
-                    <li class="carrousel_01"><img class="img_01" src="./assets/img/cafe_frutal/local_nocturno.jpeg" alt="img_01"></li>
-                    <li class="carrousel_02"><img class="img_02" src="./assets/img/cafe_frutal/taza_05.jpeg" alt="img_01"></li>
-                    <li class="carrousel_03"><img class="img_03" src="./assets/img/cafe_frutal/local_interior.jpeg" alt="img_01"></li>
+                    <li class="carrousel_01"><img class="img_01" src="/public/assets/img/cafe_frutal/local_nocturno.jpeg" alt="img_01"></li>
+                    <li class="carrousel_02"><img class="img_02" src="/public/assets/img/cafe_frutal/taza_05.jpeg" alt="img_01"></li>
+                    <li class="carrousel_03"><img class="img_03" src="/public/assets/img/cafe_frutal/local_interior.jpeg" alt="img_01"></li>
                 </ul>
             </figure>
             <article class="contenedor_titulos">
@@ -76,7 +76,7 @@
                         <button><a href="#contacto">Redes</a></button>
                     </article>
                 </div>
-                <img class="logo_fondo_animado" src="./assets/img/logo/logo_planta.png" alt="Logo Fondo Movimiento">
+                <img class="logo_fondo_animado" src="/public/assets/img/logo/logo_planta.png" alt="Logo Fondo Movimiento">
             </article>
         </section>
         <section class="contenedor_frase" id="nosotros">
@@ -92,25 +92,25 @@
             </article>
             <div class="cont_inferior_productos">
                 <article class="contenedor_cafes">
-                    <h1>Café Especialidad<img src="./assets/img/icons/producto_cafe.png" alt="Ícono Bolsa Café"></h1>
+                    <h1>Café Especialidad<img src="/public/assets/img/icons/producto_cafe.png" alt="Ícono Bolsa Café"></h1>
                     <article class="productos_cafes">
                         <div class="cafe_01">
-                            <img src="./assets/img/products/cafe_anayansi.jpeg" alt="Café Anayansi">
+                            <img src="/public/assets/img/products/cafe_anayansi.jpeg" alt="Café Anayansi">
                             <h2>ANAYANSI</h2>
                             <span id="anayansiAgotado">AGOTADO</span><button id="quieroAnayansi">¡Quiero esto!</button></a>
                         </div>
                         <div class="cafe_02">
-                            <img src="./assets/img/products/cafe_cochadas.jpeg" alt="Café Cochadas">
+                            <img src="/public/assets/products/cafe_cochadas.jpeg" alt="Café Cochadas">
                             <h2>COCHADAS</h2>
                             <span id="cochadasAgotado">AGOTADO</span><button id="quieroCochadas">¡Quiero esto!</button></a>
                         </div>
                         <div class="cafe_03">
-                            <img src="./assets/img/products/cafe_deorigen.jpeg" alt="Café de Origen">
+                            <img src="/public/assets/img/products/cafe_deorigen.jpeg" alt="Café de Origen">
                             <h2>DE ORIGEN</h2>
                             <span id="deOrigenAgotado">AGOTADO</span><button id="quieroDeOrigen">¡Quiero esto!</button></a>
                         </div>
                         <div class="cafe_04">
-                            <img src="./assets/img/products/cafe_lunaazul.jpeg" alt="Café Luna azul">
+                            <img src="/public/assets/img/products/cafe_lunaazul.jpeg" alt="Café Luna azul">
                             <h2>LUNA AZUL</h2>
                             <span id="lunaAzulAgotado">AGOTADO</span><button id="quieroLunaAzul">¡Quiero esto!</button></a>
                         </div>
@@ -119,24 +119,24 @@
                 </article>
                 <div class="cont_productos_derecho">
                     <article class="contenedor_pasteleria_reposteria">
-                        <h1>Pastelería <img src="./assets/img/icons/pasteleria.png" alt="Ícono Pasteleria"> Respostería <img src="./assets/img/icons/reposteria.png" alt="Ícono Reposteria"></h1>
+                        <h1>Pastelería <img src="/public/assets/img/icons/pasteleria.png" alt="Ícono Pasteleria"> Respostería <img src="/public/assets/img/icons/reposteria.png" alt="Ícono Reposteria"></h1>
                         <figure class="pasteleria_productos">
                             <figure class="pasteleria_izquierdo">
-                                <img src="./assets/img/products/canela_roll.jpeg" alt="Canela Roll">
+                                <img src="/public/assets/img/products/canela_roll.jpeg" alt="Canela Roll">
                             </figure>
                             <figure class="pasteleria_derecho">
-                                <img src="./assets/img/products/muffin.jpeg" alt="Muffin">
-                                <img src="./assets/img/products/sandwich.jpeg" alt="Sandwich">
-                                <img src="./assets/img/products/almuerzo.jpeg" alt="Almuerzo">
-                                <img src="./assets/img/products/rollo_01.jpeg" alt="Rollo">
-                                <img src="./assets/img/products/rollo_02.jpeg" alt="Rollo">
-                                <img src="./assets/img/products/muffin_2.jpeg" alt="Muffin">
-                                <img src="./assets/img/products/cheesecake_frutos_rojos.jpeg" alt="Cheesecake Frutos rojos">
-                                <img src="./assets/img/products/cheesecake_maracuya.jpeg" alt="Cheesecake Maracuya">
-                                <img src="./assets/img/products/postres.jpeg" alt="Postres">
-                                <img src="./assets/img/products/rollo_03.jpeg" alt="Rollo">
-                                <img src="./assets/img/products/alfajores.jpeg" alt="Alfajores">
-                                <img src="./assets/img/products/croissant.jpg" alt="Croissant">
+                                <img src="/public/assets/img/products/muffin.jpeg" alt="Muffin">
+                                <img src="/public/assets/img/products/sandwich.jpeg" alt="Sandwich">
+                                <img src="/public/assets/img/products/almuerzo.jpeg" alt="Almuerzo">
+                                <img src="/public/assets/img/products/rollo_01.jpeg" alt="Rollo">
+                                <img src="/public/assets/img/products/rollo_02.jpeg" alt="Rollo">
+                                <img src="/public/assets/img/products/muffin_2.jpeg" alt="Muffin">
+                                <img src="/public/assets/img/products/cheesecake_frutos_rojos.jpeg" alt="Cheesecake Frutos rojos">
+                                <img src="/public/assets/img/products/cheesecake_maracuya.jpeg" alt="Cheesecake Maracuya">
+                                <img src="/public/assets/img/products/postres.jpeg" alt="Postres">
+                                <img src="/public/assets/img/products/rollo_03.jpeg" alt="Rollo">
+                                <img src="/public/assets/img/products/alfajores.jpeg" alt="Alfajores">
+                                <img src="/public/assets/img/products/croissant.jpg" alt="Croissant">
                             </figure>
                         </figure>
                     </article>
@@ -155,17 +155,17 @@
                     <p>09:00am - 10:30pm</p>
                 </article>
             </article>
-            <img class="cafe_central" src="./assets/img/icons/cafe_granos_2.png" alt="">
+            <img class="cafe_central" src="/public/assets/img/icons/cafe_granos_2.png" alt="">
             <article class="medio_de_pago">
                 <article class="medios">
                     <h1>Medios de pago</h1>
                     <h2>Efectivo, débito, crédito y transferencias</h2>
                 </article>
                 <figure class="logos_pagos">
-                    <img src="./assets/img/icons/logo_visa.png" alt="Logo Visa">
-                    <img src="./assets/img/icons/mastercard.png" alt="Logo Mastercard">
-                    <img src="./assets/img/icons/bancolombia.png" alt="Logo Bancolombia">
-                    <img src="./assets/img/icons/nequi.png" alt="Logo Nequi">
+                    <img src="/public/assets/img/icons/logo_visa.png" alt="Logo Visa">
+                    <img src="/public/assets/img/icons/mastercard.png" alt="Logo Mastercard">
+                    <img src="/public/assets/img/icons/bancolombia.png" alt="Logo Bancolombia">
+                    <img src="/public/assets/img/icons/nequi.png" alt="Logo Nequi">
                 </figure>
             </article>
         </section>
@@ -177,11 +177,11 @@
             <div class="tazasCafe">
                 <h1>Nuestro arte 🤎☕</h1>
                 <figure class="contTazasCafe">
-                    <img src="./assets/img/cafe_frutal/taza_01.jpeg" alt="Taza Café">
-                    <img src="./assets/img/cafe_frutal/taza_02.jpeg" alt="Taza Café">
-                    <img src="./assets/img/cafe_frutal/taza_03.jpeg" alt="Taza Café">
-                    <img src="./assets/img/cafe_frutal/taza_04.jpeg" alt="Taza Café">
-                    <img src="./assets/img/cafe_frutal/taza_05.jpeg" alt="Taza Café">
+                    <img src="/public/assets/img/cafe_frutal/taza_01.jpeg" alt="Taza Café">
+                    <img src="/public/assets/img/cafe_frutal/taza_02.jpeg" alt="Taza Café">
+                    <img src="/public/assets/img/cafe_frutal/taza_03.jpeg" alt="Taza Café">
+                    <img src="/public/assets/img/cafe_frutal/taza_04.jpeg" alt="Taza Café">
+                    <img src="/public/assets/img/cafe_frutal/taza_05.jpeg" alt="Taza Café">
                 </figure>
             </div>
         </section>
@@ -221,11 +221,11 @@
                     </form>
                     <figure class="redes_form">
                         <figure class="redes_01">
-                            <a href="https://www.facebook.com/CafeFrutal"><img src="./assets/img/icons/facebook.png" alt="Logo Facebook"></a>
+                            <a href="https://www.facebook.com/CafeFrutal"><img src="/public/assets/img/icons/facebook.png" alt="Logo Facebook"></a>
                             <a href="https://www.facebook.com/CafeFrutal">Café Frutal</a>
                         </figure>
                         <figure class="redes_02">
-                            <a href="https://www.instagram.com/cafefrutal/"><img src="./assets/img/icons/instagram.png" alt="Logo Instagram"></a>
+                            <a href="https://www.instagram.com/cafefrutal/"><img src="/public/assets/img/icons/instagram.png" alt="Logo Instagram"></a>
                             <a href="https://www.instagram.com/cafefrutal/">@cafefrutal</a>
                         </figure>
                     </figure>
@@ -274,15 +274,14 @@
     </main>
     <!--FOOTER-->
     <footer>
-        <img src="./assets/img/logo/logo_horizontal_light.png" alt="Logo Claro Horizontal Cafe Frutal">
+        <img src="/public/assets/img/logo/logo_horizontal_light.png" alt="Logo Claro Horizontal Cafe Frutal">
         <article class="info_footer">
             <p class="primer_p">Desarrollado & Diseñado por</p>
             <p class="segundo_p">Estanislao Salinas Previte - estanisprevite@hotmail.com</p>
         </article>
     </footer>
     <!--VINCULACIÓN JS-->
-    <!-- <script type="module" src="/app/js/app.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/functions.js"></script>
+    <script src="/public/functions.js"></script>
 </body>
 </html>
