--- a/public/index.html
+++ b/public/index.html
@@ -283,5 +283,6 @@
     <!--VINCULACIÓN JS-->
     <script src="/socket.io/socket.io.js"></script>
     <script src="/public/functions.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
