--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café Frutal - Medellin</title>
     <!--VINCULACIÓN STYLES-->
-    <link rel="stylesheet" href="./public/assets/styles/styles.css">
+    <link rel="stylesheet" href="/public/assets/styles/styles.css">
     <!--FAVICON-->
     <link rel="shortcut icon" href="/public/assets/img/logo/logo_planta.png" type="image/x-icon">
     <!--FUENTES GOOGLE-->
