Modificaciones en imagen principal carrousel, también añadimos botones al menu hamburguesa, estilizamos mejor el footer

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
                     <li><img class="li_01" src="./assets/img/icons/taza_cafe.png" alt=""><a href="#nosotros">NOSOTROS</a></li>
                     <li><img class="li_02" src="./assets/img/icons/cafe_granos_2.png" alt=""><a href="#productos">PRODUCTOS</a></li>
                     <li><img class="li_03" src="./assets/img/icons/planta_cafe.png" alt=""><a href="#contacto">CONTACTO</a></li>
+                    <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafefrutal">Nuestra carta</a></button>
+                    <button id="adminButton">🔒Administración</button>
+                    <button id="logOutButton">Cerrar Sesión</button>
                 </ul>
             </div>
             <div class="redes_hamburguesa">
@@ -44,6 +47,7 @@
             <li><a href="#productos">PRODUCTOS</a></li>
             <li><a href="#contacto">CONTACTO</a></li>
         </ul>
+        <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafefrutal">Nuestra carta</a></button>
         <button id="adminButton">🔒Administración</button>
         <button id="logOutButton">Cerrar Sesión</button>
         <img class="icon_hamburguesa" id="icon_hamburguesa" src="./assets/img/icons/menu_hamburguesa.png" alt="Ícono Menu Hamburguesa">
@@ -56,9 +60,9 @@
         <section class="contenedor_principal">
             <figure class="contenedor_carrousel">
                 <ul>
-                    <li class="carrousel_01"><img class="img_01" src="./assets/img/cafe_frutal/local_nocturno.jpeg" alt="img_01"></li>
-                    <li class="carrousel_02"><img class="img_02" src="./assets/img/cafe_frutal/taza_05.jpeg" alt="img_01"></li>
-                    <li class="carrousel_03"><img class="img_03" src="./assets/img/cafe_frutal/local_interior.jpeg" alt="img_01"></li>
+                    <li class="carrousel_01"><img class="img_01" src="./assets/img/cafe_frutal/local_nocturno.jpeg" alt="Local de Café Frutal Nocturno"></li>
+                    <li class="carrousel_02"><img class="img_02" src="./assets/img/cafe_frutal/taza_08.jpg" alt="Taza de Café exhibida y servida"></li>
+                    <li class="carrousel_03"><img class="img_03" src="./assets/img/cafe_frutal/local_interior.jpeg" alt="Imagen del interior del local Café Frutal"></li>
                 </ul>
             </figure>
             <article class="contenedor_titulos">
@@ -74,6 +78,7 @@
                         <button><a href="#horarios">Horarios</a></button>
                         <button><a href="#ubicacion">Ubicación</a></button>
                         <button><a href="#contacto">Redes</a></button>
+                        <button><a href="/public/assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal">Nuestra carta</a></button>
                     </article>
                 </div>
                 <img class="logo_fondo_animado" src="./assets/img/logo/logo_planta.png" alt="Logo Fondo Movimiento">
@@ -97,21 +102,25 @@
                         <div class="cafe_01">
                             <img src="./assets/img/products/cafe_anayansi.jpeg" alt="Café Anayansi">
                             <h2>ANAYANSI</h2>
+                            <h2>$20.000</h2>
                             <span id="anayansiAgotado">AGOTADO</span><button id="quieroAnayansi">¡Quiero esto!</button></a>
                         </div>
                         <div class="cafe_02">
                             <img src="./assets/img/products/cafe_cochadas.jpeg" alt="Café Cochadas">
                             <h2>COCHADAS</h2>
+                            <h2>$26.000</h2>
                             <span id="cochadasAgotado">AGOTADO</span><button id="quieroCochadas">¡Quiero esto!</button></a>
                         </div>
                         <div class="cafe_03">
                             <img src="./assets/img/products/cafe_deorigen.jpeg" alt="Café de Origen">
                             <h2>DE ORIGEN</h2>
+                            <h2>$20.000</h2>
                             <span id="deOrigenAgotado">AGOTADO</span><button id="quieroDeOrigen">¡Quiero esto!</button></a>
                         </div>
                         <div class="cafe_04">
                             <img src="./assets/img/products/cafe_lunaazul.jpeg" alt="Café Luna azul">
                             <h2>LUNA AZUL</h2>
+                            <h2>$20.000</h2>
                             <span id="lunaAzulAgotado">AGOTADO</span><button id="quieroLunaAzul">¡Quiero esto!</button></a>
                         </div>
                     </article>
@@ -276,7 +285,7 @@
     <footer>
         <img src="./assets/img/logo/logo_horizontal_light.png" alt="Logo Claro Horizontal Cafe Frutal">
         <article class="info_footer">
-            <p class="primer_p">Desarrollado & Diseñado por</p>
+            <p class="primer_p">Web Desarrollada por</p>
             <p class="segundo_p">Estanislao Salinas Previte - estanisprevite@hotmail.com</p>
         </article>
     </footer>
