Modificamos imagenes de fondo de containers, solucionamos error de typeo en clase del nav

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-     <div class="menu_hamburguesa" id="menu_hamburguesa">
+        <div class="menu_hamburguesa" id="menu_hamburguesa">
             <div class="titulo_hamburguesa">
                 <ul>
                     <li>Menu</li>
@@ -28,26 +28,26 @@
                     <li><img class="li_01" src="./assets/img/icons/taza_cafe.png" alt=""><a href="#nosotros">NOSOTROS</a></li>
                     <li><img class="li_02" src="./assets/img/icons/cafe_granos_2.png" alt=""><a href="#productos">PRODUCTOS</a></li>
                     <li><img class="li_03" src="./assets/img/icons/planta_cafe.png" alt=""><a href="#contacto">CONTACTO</a></li>
-                    <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafefrutal">Nuestra carta</a></button>
-                    <button id="adminButton">🔒Administración</button>
-                    <button id="logOutButton">Cerrar Sesión</button>
+                    <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafefrutalHamburguesa">Nuestra carta</a></button>
+                    <button id="adminButtonHamburguesa">🔒Administración</button>
+                    <button id="logOutButtonHamburguesa">Cerrar Sesión</button>
                 </ul>
             </div>
             <div class="redes_hamburguesa">
-                <a href="/"><img src="./assets/img/icons/instagram.png" alt="Ícono Instagram"></a>
-                <a href="/"><img src="./assets/img/icons/facebook.png" alt="Ícono Facebook"></a>
-                <a href="/"><img src="./assets/img/icons/whatsapp.png" alt="Ícono Whatsapp"></a>
+                <a href="https://www.instagram.com/cafefrutal/"><img src="./assets/img/icons/instagram.png" alt="Ícono Instagram"></a>
+                <a href="https://www.facebook.com/CafeFrutal"><img src="./assets/img/icons/facebook.png" alt="Ícono Facebook"></a>
+                <a href="https://wa.me/573206214348?text=¡Hola!%20Quiero%20contactarme%20con%20Café%20frutal"><img src="./assets/img/icons/whatsapp.png" alt="Ícono Whatsapp"></a>
             </div>
         </div>
     <!--NAV-->
     <nav>
         <ul class="ul_nav">
-            <li><a href="/index.html"><img src="./assets/img/logo/logo_horizontal.png" alt="Logo Horizontal"></a></li>
+            <li><a href="/index.html"><img src="./assets/img/logo/logo_horizontal.png" alt="Logo Café Frutal Horizontal"></a></li>
             <li><a href="#nosotros">NOSOTROS</a></li>
             <li><a href="#productos">PRODUCTOS</a></li>
             <li><a href="#contacto">CONTACTO</a></li>
         </ul>
-        <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafefrutal">Nuestra carta</a></button>
+        <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafeFrutal">Nuestra carta</a></button>
         <button id="adminButton">🔒Administración</button>
         <button id="logOutButton">Cerrar Sesión</button>
         <img class="icon_hamburguesa" id="icon_hamburguesa" src="./assets/img/icons/menu_hamburguesa.png" alt="Ícono Menu Hamburguesa">
@@ -78,7 +78,7 @@
                         <button><a href="#horarios">Horarios</a></button>
                         <button><a href="#ubicacion">Ubicación</a></button>
                         <button><a href="#contacto">Redes</a></button>
-                        <button><a href="/public/assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal">Nuestra carta</a></button>
+                        <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal">Nuestra carta</a></button>
                     </article>
                 </div>
                 <img class="logo_fondo_animado" src="./assets/img/logo/logo_planta.png" alt="Logo Fondo Movimiento">
@@ -102,7 +102,7 @@
                         <div class="cafe_01">
                             <img src="./assets/img/products/cafe_anayansi.jpeg" alt="Café Anayansi">
                             <h2>ANAYANSI</h2>
-                            <h2>$20.000</h2>
+                            <h2>$90.000</h2>
                             <span id="anayansiAgotado">AGOTADO</span><button id="quieroAnayansi">¡Quiero esto!</button></a>
                         </div>
                         <div class="cafe_02">
