Corregimos error de conexion con functions.js

--- a/public/index.html
+++ b/public/index.html
@@ -291,6 +291,6 @@
     </footer>
     <!--VINCULACIÓN JS-->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./functions.js"></script>
+    <script src="/functions.js"></script>
 </body>
 </html>
