--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
                     <li><img class="li_02" src="./assets/img/icons/cafe_granos_2.png" alt=""><a href="#productos">PRODUCTOS</a></li>
                     <li><img class="li_03" src="./assets/img/icons/planta_cafe.png" alt=""><a href="#contacto">CONTACTO</a></li>
                     <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafefrutalHamburguesa">Nuestra carta</a></button>
-                    <button id="adminButtonHamburguesa">🔒Administración</button>
-                    <button id="logOutButtonHamburguesa">Cerrar Sesión</button>
+                    <button id="adminButton" class="adminButton">🔒Administración</button>
+                    <button id="logOutButton" class="logOutButton">Cerrar Sesión</button>
                 </ul>
             </div>
             <div class="redes_hamburguesa">
