--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
                     <li><img class="li_02" src="./assets/img/icons/cafe_granos_2.png" alt=""><a href="#productos">PRODUCTOS</a></li>
                     <li><img class="li_03" src="./assets/img/icons/planta_cafe.png" alt=""><a href="#contacto">CONTACTO</a></li>
                     <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafefrutalHamburguesa">Nuestra carta</a></button>
-                    <button id="adminButton" class="adminButton">🔒Administración</button>
-                    <button id="logOutButton" class="logOutButton">Cerrar Sesión</button>
+                    <button id="adminButtonHamburguesa" class="adminButton">🔒Administración</button>
+                    <button id="logOutButtonHamburguesa" class="logOutButton">Cerrar Sesión</button>
                 </ul>
             </div>
             <div class="redes_hamburguesa">
@@ -47,7 +47,7 @@
             <li><a href="#productos">PRODUCTOS</a></li>
             <li><a href="#contacto">CONTACTO</a></li>
         </ul>
-        <button><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafeFrutal">Nuestra carta</a></button>
+        <button id="buttonCarta"><a href="./assets/downloads/Carta_CafeFrutal.pdf" download="Carta_CafeFrutal" class="cartaCafeFrutal">Nuestra carta</a></button>
         <button id="adminButton">🔒Administración</button>
         <button id="logOutButton">Cerrar Sesión</button>
         <img class="icon_hamburguesa" id="icon_hamburguesa" src="./assets/img/icons/menu_hamburguesa.png" alt="Ícono Menu Hamburguesa">
